[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "^0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "^0.6.0"
kube = { version = "^0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "^0.23.0", features = ["latest"] }
kube-client = "0.96.0"
schemars = { version = "^0.8", optional = true, default-features = false }
regex = "1.11.1"
async-recursion = "0.3.1"

[features]
# 在资源类型上启用schemars::JsonSchema实现。
schemars = ["dep:schemars"]
